# anagram-solver

./: .gitignore  LICENSE  Main.hs  anagram-solver-complex.cabal  anagram-solver.cabal  readme.md
Anagram/: Solver.hs
src/Anagram/: Solver.hs
