name:                anagram-solver
version:             0.1.0.0
synopsis:            An efficient anagram solver
description:         An efficient anagram solver implemented using a DAWG
license:             BSD2
license-file:        LICENSE
author:              Jochen Keil
maintainer:          Jochen Keil <jochen.keil+anagram-solver@gmail.com>
homepage:            http://github.com/jotrk/anagram-solver/
bug-reports:         http://github.com/jotrk/anagram-solver/issues

category:            Algorithms
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/jotrk/anagram-solver.git

library
  exposed-modules:   Anagram.Solver

  build-depends:     base                 >= 4.7  && < 4.8,
                     dawg                 >= 0.11 && < 0.12,
                     dlist                >= 0.7  && < 0.8,
                     hashable             >= 1.2  && < 1.3,
                     unordered-containers >= 0.2  && < 0.3

  other-extensions:  CPP

  default-language:  Haskell2010
  ghc-options:       -Wall
  hs-source-dirs:    src
